--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
-  <nav class="colorNav" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Galvanize Delivers</a>
+  <nav class="blue darken-3" role="navigation">
+    <div class="nav-wrapper container"><a id="logo-container" href="index.html" class="brand-logo">Galvanize Delivers</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="order.html">Order Delivery</a></li>
       </ul>
@@ -26,11 +26,13 @@
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
+
       <h1 class="header center white-text">Fine Dining, Delivered</h1>
       <div class="row center">
-      </div>
-      <div class="row center">
         <a href="order.html" id="download-button" class="btn-large waves-effect waves-light pink">Place an Order</a>
+      </div>
+      <div class="row center hideThis">
+        <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
       </div>
       <br><br>
 
@@ -43,52 +45,42 @@
 
       <!--   Icon Section   -->
       <div class="row">
+        <br><br>
         <div class="col s12 m4">
           <div class="icon-block">
-            <h5 class="center pink-text"><i class="material-icons">shopping_basket</i>
-Shop Online</h5>
+            <h5 class="pink-text"><i class="material-icons">shopping_cart</i> Shop Online</h5>
 
-            <p class="light">Using our convenient web app, you'll get all the power of gFood without having to call your order in.  Order in your pajamas, order 24 hours a day, order on Christmas, we're here to serve you.</p>
+            <p class="light">Using our convenient web app, you'll get all the power of gFood without having to call your order in. Order in your pajamas, order 24 hours a day, order on Christmas, we're here to serve you.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h5 class="center pink-text"><i class="material-icons">grade</i>Fast Deilvery</h5>
-            <p class="light">You've never seen ordering this quick. Our proprietary ordering rocket ship delivery team allows you to spend less time being hungry, and more time doing what matters most to you.  We'd ask that is, but gFood respects your privacy.</p>
+            <h5 class="pink-text"><i class="material-icons">fast_forward</i> Fast Delivery</h5>
+
+            <p class="light">You've never seen ordering this quick. Our proprietary ordering rocket ship delivery team allows you to spend less time being hungry, and more time doing what matters most to you. We'd ask what that is, but gFood respects your privacy.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h5 class="center pink-text"><i class="material-icons">settings_bluetooth</i>Great Deals</h5>
-            <p class="light">Money: You've got it, we want it.  But let it never be said we're not incredibly fair!  Burger sales? Check.  Pizza sales? Check.  Burger and pizza sales?? Check, check, check!  We seriously can't stop making deals.</p>
+            <h5 class="pink-text"><i class="material-icons">loyalty</i> Great Deals</h5>
+
+            <p class="light">Money: you've got it, we want it. But let it never be said we're not incredibly fair! Burder sales? Check. Pizza sales? Check. Burger and pizza sales?? Check, check, check! We seriously can't stop making deals.</p>
           </div>
         </div>
       </div>
-
-    </div>
-    <br><br>
-
-    <div class="section">
-
     </div>
   </div>
 
   <footer class="page-footer blue darken-3">
     <div class="container">
       <div class="row">
-        <div class="col l6 s12">
+        <div class="col l8 s12">
           <h5 class="white-text">Galvanize Delivers</h5>
-          <p class="grey-text text-lighten-4">Fine Dining.</p>
-
-
+          <p class="grey-text text-lighten-4">Fine Dining, Delivered.</p>
         </div>
-        <div class="col l3 s12">
-          <h5 class="white-text"></h5>
-
-        </div>
-        <div class="col l3 s12">
+        <div class="col l4 s12">
           <ul>
             <li><a class="white-text" href="index.html">Home</a></li>
             <li><a class="white-text" href="order.html">Order Delivery</a></li>
@@ -98,7 +90,7 @@ Shop Online</h5>
     </div>
     <div class="footer-copyright">
       <div class="container">
-      C2016 Galvanize Delivers
+        &copy; 2016 Galvanize Delivers
       </div>
     </div>
   </footer>
@@ -107,7 +99,7 @@ Shop Online</h5>
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+  <script src="js/order.js" charset="utf-8"></script>
 
   </body>
 </html>
